--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"scripts": {
 		"bootstrap": "lerna bootstrap --force-local --hoist --ignore-scripts",
 		"start": "cross-env NODE_OPTIONS='--max-old-space-size=4096' && npm run clean && concurrently \"react-app-rewired start\" \"chokidar './src/**/readme.tsx' -c 'npm run docgen:examples'\"",
+		"start:docs": "yarn --cwd website dev",
 		"build:docsite": "cross-env NODE_OPTIONS='--max-old-space-size=4096' react-app-rewired build && rm -R -f docs && mv build docs",
 		"build:docs": "npm run clean && npm run docgen && npm run build:docsite",
 		"build:code": "npm run clean && node scripts/build-code.js",
@@ -96,7 +97,8 @@
 		"node_modules"
 	],
 	"workspaces": [
-		"./src/*"
+		"./src/*",
+		"./website"
 	],
 	"config-overrides-path": "config/rewire",
 	"browserslist": [
