Show front page without styling

--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,46 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.1",
+    "avatar": "./src/avatar",
+    "badge": "./src/badge",
+    "base": "./src/base",
+    "button": "./src/button",
+    "card": "./src/card",
+    "checkbox": "./src/checkbox",
+    "chip": "./src/chip",
+    "circular-progress": "./src/circular-progress",
+    "data-table": "./src/data-table",
+    "dialog": "./src/dialog",
+    "drawer": "./src/drawer",
+    "elevation": "./src/elevation",
+    "fab": "./src/fab",
+    "floating-label": "./src/floating-label",
+    "formfield": "./src/formfield",
+    "grid": "./src/grid",
+    "grid-list": "./src/grid-list",
+    "icon": "./src/icon",
+    "icon-button": "./src/icon-button",
+    "image-list": "./src/image-list",
+    "line-ripple": "./src/line-ripple",
+    "linear-progress": "./src/linear-progress",
+    "list": "./src/list",
+    "menu": "./src/menu",
+    "notched-outline": "./src/notched-outline",
+    "provider": "./src/provider",
+    "radio": "./src/radio",
+    "ripple": "./src/ripple",
+    "select": "./src/select",
+    "slider": "./src/slider",
+    "snackbar": "./src/snackbar",
+    "switch": "./src/switch",
+    "tabs": "./src/tabs",
+    "textfield": "./src/textfield",
+    "theme": "./src/theme",
+    "toggleable": "./src/toggleable",
+    "tooltip": "./src/tooltip",
+    "top-app-bar": "./src/top-app-bar",
+    "types": "./src/types",
+    "typography": "./src/typography",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
@@ -22,6 +62,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rmwc": "*",
+    "doc-utils": "*",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^10.0.0"
   }
 }
