--- a/website/package.json
+++ b/website/package.json
@@ -9,57 +9,57 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@doc-utils": "file:../src/doc-utils",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.1",
-    "avatar": "./src/avatar",
-    "badge": "./src/badge",
-    "base": "./src/base",
-    "button": "./src/button",
-    "card": "./src/card",
-    "checkbox": "./src/checkbox",
-    "chip": "./src/chip",
-    "circular-progress": "./src/circular-progress",
-    "data-table": "./src/data-table",
-    "dialog": "./src/dialog",
-    "drawer": "./src/drawer",
-    "elevation": "./src/elevation",
-    "fab": "./src/fab",
-    "floating-label": "./src/floating-label",
-    "formfield": "./src/formfield",
-    "grid": "./src/grid",
-    "grid-list": "./src/grid-list",
-    "icon": "./src/icon",
-    "icon-button": "./src/icon-button",
-    "image-list": "./src/image-list",
-    "line-ripple": "./src/line-ripple",
-    "linear-progress": "./src/linear-progress",
-    "list": "./src/list",
-    "material-components-web": "^8.0.0",
-    "menu": "./src/menu",
-    "notched-outline": "./src/notched-outline",
-    "provider": "./src/provider",
-    "radio": "./src/radio",
-    "ripple": "./src/ripple",
-    "select": "./src/select",
-    "slider": "./src/slider",
-    "snackbar": "./src/snackbar",
-    "switch": "./src/switch",
-    "tabs": "./src/tabs",
-    "textfield": "./src/textfield",
-    "theme": "./src/theme",
-    "toggleable": "./src/toggleable",
-    "tooltip": "./src/tooltip",
-    "top-app-bar": "./src/top-app-bar",
-    "types": "./src/types",
-    "typography": "./src/typography",
-    "@doc-utils": "./src/doc-utils",
+    "@rmwc/avatar": "*",
+    "@rmwc/badge": "*",
+    "@rmwc/base": "*",
+    "@rmwc/button": "*",
+    "@rmwc/card": "*",
+    "@rmwc/checkbox": "*",
+    "@rmwc/chip": "*",
+    "@rmwc/circular-progress": "*",
+    "@rmwc/data-table": "*",
+    "@rmwc/dialog": "*",
+    "@rmwc/drawer": "*",
+    "@rmwc/elevation": "*",
+    "@rmwc/fab": "*",
+    "@rmwc/floating-label": "*",
+    "@rmwc/formfield": "*",
+    "@rmwc/grid": "*",
+    "@rmwc/grid-list": "*",
+    "@rmwc/icon": "*",
+    "@rmwc/icon-button": "*",
+    "@rmwc/image-list": "*",
+    "@rmwc/line-ripple": "*",
+    "@rmwc/linear-progress": "*",
+    "@rmwc/list": "*",
+    "@rmwc/menu": "*",
+    "@rmwc/notched-outline": "*",
+    "@rmwc/provider": "*",
+    "@rmwc/radio": "*",
+    "@rmwc/ripple": "*",
+    "@rmwc/select": "*",
+    "@rmwc/slider": "*",
+    "@rmwc/snackbar": "*",
+    "@rmwc/switch": "*",
+    "@rmwc/tabs": "*",
+    "@rmwc/textfield": "*",
+    "@rmwc/theme": "*",
+    "@rmwc/toggleable": "*",
+    "@rmwc/tooltip": "*",
+    "@rmwc/top-app-bar": "*",
+    "@rmwc/types": "*",
+    "@rmwc/typography": "*",
     "@types/mdx": "^2.0.5",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "material-components-web": "^8.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
