--- a/website/package.json
+++ b/website/package.json
@@ -60,9 +60,11 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "material-components-web": "^8.0.0",
+    "prism-react-renderer": "2.0.4",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-live": "^4.1.0",
     "rmwc": "*",
     "typescript": "5.0.4"
   }
