--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
 		"version": "node scripts/fix-package-version && npm run changelog && git add CHANGELOG.md && git commit --allow-empty -m 'Updating Changelog'",
 		"prepare": "husky install",
 		"build-storybook": "build-storybook",
-		"validate:actions": "action-validator .github/workflows/automerge.yml && action-validator .github/workflows/codeql-analysis.yml && action-validator .github/workflows/publish.yml && action-validator .github/workflows/unit-test.yml && action-validator .github/workflows/version.yml"
+		"validate:actions": "action-validator .github/workflows/automerge.yml && action-validator .github/workflows/codeql-analysis.yml && action-validator .github/workflows/publish.yml && action-validator .github/workflows/unit-test.yml && action-validator .github/workflows/version.yml",
+		"nextjs:dev": "cd src/rmwcnext && $npm_execpath run dev",
+		"nextjs:build": "cd src/rmwcnext && $npm_execpath run build",
+		"nextjs:start": "cd src/rmwcnext && $npm_execpath run start"
 	},
 	"devDependencies": {
 		"@action-validator/cli": "^0.5.1",
@@ -75,12 +78,14 @@
 		"concurrently": "^7.3.0",
 		"copyfiles": "^2.4.1",
 		"cross-env": "^7.0.3",
+		"css-loader": "^6.8.1",
 		"documentalist": "^1.6.0",
 		"eslint-plugin-babel": "^5.3.1",
 		"generate-changelog": "^1.8.0",
 		"husky": "^8.0.3",
 		"lerna": "^6.6.1",
 		"module-alias": "^2.2.2",
+		"next": "^13.4.7",
 		"prettier": "2.3.1",
 		"react": "^18.2.0",
 		"react-app-rewired": "^2.2.1",
@@ -91,6 +96,7 @@
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.1",
 		"sass": "^1.54.4",
+		"style-loader": "^3.3.3",
 		"typescript": "4.3.5"
 	},
 	"eslintIgnore": [
